UI 메뉴 그룹화 및 화면 설명 추가, UI 스모크 경로 확장